[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rstmdb"
version = "0.1.0"
description = "Python client library for rstmdb server using RCP protocol"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "rstmdb contributors" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
    "mypy>=1.0",
    "tox>=4.0",
]

[project.urls]
Homepage = "https://github.com/rstmdb/rstmdb-py"
Documentation = "https://github.com/rstmdb/rstmdb-py#readme"
Repository = "https://github.com/rstmdb/rstmdb-py"

[tool.hatch.build.targets.wheel]
packages = ["src/rstmdb"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
